# gcc-windows-cmake-opencv

./: CMakeLists.txt  CvEllipseFitExp.cpp  README.md
